# thermal_camera_monitor

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: camera_params.yaml
launch/: thermal_camera_monitor.launch.py
rviz/: thermal_camera_monitor.rviz
src/: hik_alarm_node.cpp
